--- a/Regna.Web/Views/Shared/_Layout.cshtml
+++ b/Regna.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <title>@ViewData["Title"] - Regna.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/jquery-ui-1.13.2/jquery-ui.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/jtable.2.4.0/themes/metro/blue/jtable.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Regna.Web.styles.css" asp-append-version="true" />
+    @await RenderSectionAsync("CSS", required: false)
 </head>
 <body>
     <header>
@@ -21,6 +24,9 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CardBuilder">Card Builder</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Gameplay">Gameplay</a>
@@ -41,8 +47,10 @@
             &copy; 2023 - Regna.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery-ui-1.13.2/jquery-ui.js"></script>
+    <script src="~/lib/jtable.2.4.0/jquery.jtable.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
