--- a/Regna.Web/Views/Shared/_Layout.cshtml
+++ b/Regna.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="GenericVariable">Generic Variable Builder</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CardBuilder">Card Builder</a>
                         </li>
                         <li class="nav-item">
