--- a/Regna.Web/Views/Shared/_Layout.cshtml
+++ b/Regna.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Gameplay">Gameplay</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Gameplay_Three">Gameplay Three.js</a>
+                        </li>
                     </ul>
                 </div>
             </div>
