added Action phase

--- a/Regna.Web/Views/Home/Gameplay_Three.cshtml
+++ b/Regna.Web/Views/Home/Gameplay_Three.cshtml
@@ -54,6 +54,7 @@
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
     <script src="~/lib/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="~/lib/tween/tween.umd.js"></script>
+    <script src="~/lib/sweetalert2/sweetalert2.js"></script>
     @*<script src="~/js/Konva.js"></script>*@
     <script type="module" src="~/js/GamePlay/StartUp.js"></script>
     <script type="module" src="~/js/GamePlay/API.js"></script>
